--- a/html/options/options.html
+++ b/html/options/options.html
@@ -4,7 +4,7 @@
 </tr>
 <tr
   ng-repeat="v in clickCountSorted"
-  ng-if="view == 'options' || loaded.options"
+  ng-if="(view == 'options' || loaded.options) && allFilters[v.key] && v.value > 5"
   ng-init="loaded.options = true;"
 >
   <td ng-repeat="e in [allFilters[v.key]]">
@@ -12,7 +12,7 @@
     <ng-include
       class="figure"
       src="'html/figure.html'"
-      ng-init="img_style = {'max-width': e.width || 48, 'max-height': e.width || 48}"
+      ng-init="img_style = {height: 32}"
     ></ng-include>
     <span ng-show="!allFilters[v.key]">{{ v.key }}</span>
   </td>
